--- a/src/pages/CompanionSession.css
+++ b/src/pages/CompanionSession.css
@@ -233,6 +233,7 @@
     border-radius: 2px;
     font-family: 'Courier New', monospace;
     font-size: 12px;
+    color: white;
 }
 
 .msg-text ul,
